# AirControlX

./: .gitignore  CMakeLists.txt  Makefile  README.md  Requirements.md  a.out  aircontrolx  main.cpp  rubrics.md  run.sh
Module01_Submission/23i-0562_SagarMehmood_23i-0819_WajihUrRaza/: main.cpp
docs/: AVNGeneration.md  AirlinePortal.md  Module_1.md  Module_3.md  StripePayment.md  implementation.md  module3_submodules.md
docs/modules/: Module_2.md
include/: ATCScontroller.h  AVN.h  AVNGenerator.h  Aircraft.h  Airline.h  AirlineManager.h  AirlinePortal.h  Common.h  FlightsScheduler.h  LogEntry.h  Radar.h  Runway.h  RunwayManager.h  Simulation.h  SimulationManager.h  StripePayment.h  Timer.h  VisualSimulator.h
include/visual/: Visualizer.h
src/: ATCScontroller.cpp  AVN.cpp  AVNGenerator.cpp  Aircraft.cpp  Airline.cpp  AirlineManager.cpp  AirlinePortal.cpp  FlightsScheduler.cpp  LogEntry.cpp  Radar.cpp  Runway.cpp  RunwayManager.cpp  Simulation.cpp  SimulationManager.cpp  StripePayment.cpp  Timer.cpp  VisualSimulator.cpp  main.cpp
src/visual/: Visualizer.cpp
uml/: air_control_system_uml.puml
